--- a/projects/habitat_ovmm/configs/agent/heuristic_agent.yaml
+++ b/projects/habitat_ovmm/configs/agent/heuristic_agent.yaml
@@ -7,11 +7,12 @@ store_all_categories: False  # whether to store all semantic categories in the m
 detection_module: detic # the detector to use for perception in case ground_truth_semantics are turned off
 
 VISION:
-  confidence_threshold: 0.45 # detic object detection confidence threshold
+  confidence_threshold: 0.15 # detic object detection confidence threshold
+  bayesian: True
 
 SEMANTIC_MAP:
   semantic_categories: rearrange # map semantic channel categories ("coco_indoor", "longtail_indoor", "mukul_indoor", "rearrange")
-  num_sem_categories: 5    # Following 5 categories: ["misc", "object_category", "start_receptacle", "goal_receptacle", "others"]
+  num_sem_categories: 131    # Following 5 categories: ["misc", "object_category", "start_receptacle", "goal_receptacle", "others"]
   map_size_cm: 4800        # global map size (in centimeters)
   map_resolution: 5        # size of map bins (in centimeters)
   vision_range: 100        # diameter of local map region visible by the agent (in cells)
